[package]
name = "moproxy"
version = "0.3.6"
authors = ["sorz <me@sorz.org>"]
edition = "2018"
description = "Transparent TCP to SOCKSv5/HTTP proxy on Linux written in Rust"
readme = "README.md"
repository = "https://github.com/sorz/moproxy"
license = "MIT"
keywords = ["proxy", "socksv5"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
net2 = "0.2"
clap = { version = "2.33", features = ["yaml", "color"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "1.4.0"
rust-ini = "0.15"
hyper = { version = "0.13", optional = true, default-features = false, features = ["stream", "tcp"] }
parking_lot = { version = "0.11", features = ["serde", "deadlock_detection"] }
http = "0.2"
prettytable-rs = { version = "0.8", default-features = false }
regex = "1"
lazy_static = "1.4"
number_prefix = "0.4"
futures = { version = "0.3", default-features = false, features = ["compat"] }
httparse = "1.3"
rlua = { version = "0.17", optional = true }
bytes = "0.5"
zip = { version = "0.5", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.18"
sd-notify = { version = "0.1.1", optional = true }

[features]
default = ["web_console", "score_script", "systemd", "rich_web"]
web_console = ["hyper"]
rich_web = ["web_console", "zip"]
score_script = ["rlua"]
systemd = ["sd-notify"]

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }

[package.metadata.deb]
section = "net"
priority = "optional"
assets = [
    ["target/release/moproxy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/moproxy/README", "644"],
    ["conf/moproxy.service", "usr/lib/systemd/system/", "644"],
    ["conf/config.env", "etc/moproxy/", "644"],
    ["conf/proxy.ini", "etc/moproxy/", "644"],
    ["conf/simple_score.lua", "etc/moproxy/", "644"],
]
