[package]
name = "moproxy"
version = "0.4.2"
authors = ["sorz <me@sorz.org>"]
edition = "2021"
description = "Transparent TCP to SOCKSv5/HTTP proxy on Linux written in Rust"
readme = "README.md"
repository = "https://github.com/sorz/moproxy"
license = "MIT"
keywords = ["proxy", "socksv5"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
net2 = "0.2"
clap = { version = "4", features = ["derive", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "2"
rust-ini = "0.18"
hyper = { version = "0.14", optional = true, features = [
    "http1",
    "server",
    "stream",
    "tcp",
] }
parking_lot = { version = "0.12", features = ["serde", "deadlock_detection"] }
http = "0.2"
prettytable-rs = { version = "0.10", default-features = false }
regex = "1"
lazy_static = "1"
number_prefix = "0.4"
futures-core  = "0.3"
futures-util  = "0.3"
httparse = "1"
rlua = { version = "0.19", optional = true }
bytes = "1"
zip = { version = "0.6", optional = true, default-features = false, features = [
    "deflate"
] }
base64 = "0.21"
nom = { version = "7", optional = true }
flexstr = "0.9.2"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.26"
sd-notify = { version = "0.4", optional = true }
tracing-journald = { version = "0.3", optional = true }

[features]
default = ["web_console", "score_script", "systemd", "rich_web", "policy"]
web_console = ["hyper"]
rich_web = ["web_console", "zip"]
score_script = ["rlua"]
systemd = ["sd-notify", "tracing-journald"]
policy = ["nom"]

[build-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }

[package.metadata.deb]
section = "net"
priority = "optional"
assets = [
    ["target/release/moproxy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/moproxy/README", "644"],
    ["conf/moproxy.service", "usr/lib/systemd/system/", "644"],
    ["conf/config.env", "etc/moproxy/", "644"],
    ["conf/proxy.ini", "etc/moproxy/", "644"],
    ["conf/simple_score.lua", "etc/moproxy/", "644"],
]
