[package]
name = "moproxy"
version = "0.5.1"
authors = ["sorz <me@sorz.org>"]
edition = "2021"
description = "Transparent TCP to SOCKSv5/HTTP proxy on Linux written in Rust"
readme = "README.md"
repository = "https://github.com/sorz/moproxy"
license = "MIT"
keywords = ["proxy", "socksv5"]
categories = ["command-line-utilities"]
rust-version = "1.75.0"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
net2 = "0.2"
clap = { version = "4", features = ["derive", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1"
serde_with = "3"
rust-ini = "0.20"
hyper = { version = "1", optional = true, features = [
    "http1",
    "server",
] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
parking_lot = { version = "0.12", features = ["serde", "deadlock_detection"] }
http = "1"
prettytable-rs = { version = "0.10", default-features = false }
regex = "1"
once_cell = "1"
number_prefix = "0.4"
futures-core  = "0.3"
futures-util  = "0.3"
httparse = "1"
rlua = { version = "0.19", optional = true }
bytes = "1"
zip = { version = "0.6", optional = true, default-features = false, features = [
    "deflate"
] }
base64 = "0.21"
nom = "7"
flexstr = { version = "0.9", features = ["serde"] }
anyhow = "1"
ip_network_table-deps-treebitmap = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["fs", "net", "socket"] }
sd-notify = { version = "0.4", optional = true }
tracing-journald = { version = "0.3", optional = true }

[features]
default = ["web_console", "score_script", "systemd", "rich_web"]
web_console = ["hyper"]
rich_web = ["web_console", "zip"]
score_script = ["rlua"]
systemd = ["sd-notify", "tracing-journald"]

[build-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }

[package.metadata.deb]
section = "net"
priority = "optional"
assets = [
    ["target/release/moproxy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/moproxy/README", "644"],
    ["conf/moproxy.service", "usr/lib/systemd/system/", "644"],
    ["conf/config.env", "etc/moproxy/", "644"],
    ["conf/proxy.ini", "etc/moproxy/", "644"],
    ["conf/simple_score.lua", "etc/moproxy/", "644"],
]
